# hyprnote

./: .coderabbit.yaml  .gitignore  .taurignore  Cargo.toml  README.md  Taskfile.yaml  package.json  pnpm-lock.yaml
.github/actions/cn_release/: action.yaml
.github/actions/poetry_install/: action.yaml
.github/workflows/: claude.yml  desktop_cd.yaml  desktop_ci.yaml  owhisper_cd.yaml  owhisper_cd_docker.yaml  porter_app_hyprnote-pro_4993.yml  test.yml
admin/server/: package.json
apps/admin/: package.json
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/pro/: Dockerfile  README.md  package.json  tsconfig.json
apps/pro/src/: context.ts  env.ts  exa.ts  index.ts  keygen.ts  mcp.ts
crates/aec/: Cargo.toml
crates/agc/: Cargo.toml
crates/agc/src/: lib.rs
crates/am/: Cargo.toml
crates/am/src/: client.rs  error.rs  lib.rs  model.rs  types.rs
crates/analytics/src/: lib.rs
crates/audio-utils/src/: error.rs  lib.rs
crates/audio/src/: device_monitor.rs  lib.rs  mic.rs  resampler.rs
crates/calendar-apple/src/: lib.rs
crates/calendar-google/src/: lib.rs
crates/calendar-interface/src/: lib.rs
crates/chunker/src/: chunker.rs  lib.rs
crates/data/scripts/: resamples.sh
crates/data/src/: lib.rs
crates/db-user/src/: chat_messages_migration_1.sql  chat_messages_migration_2.sql  chat_messages_ops.rs  chat_messages_types.rs  config_types.rs  events_migration_2.sql  events_ops.rs  events_types.rs  init.rs  lib.rs  seed.rs  sessions_ops.rs  tags_ops.rs  templates_migration_1.sql  templates_ops.rs  templates_types.rs
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs  list.rs
crates/detect/src/app/: macos.rs  windows.rs
crates/detect/src/list/: macos.rs  mod.rs
crates/detect/src/mic/: macos.rs
crates/download-interface/: Cargo.toml
crates/download-interface/src/: lib.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs  types.rs
crates/gbnf/: Cargo.toml
crates/gbnf/src/: lib.rs
crates/gguf/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/intercept/: Cargo.toml
crates/intercept/src/: lib.rs
crates/kyutai/: Cargo.toml
crates/kyutai/src/: assets.rs  config.rs  lib.rs  model.rs
crates/language/src/: lib.rs
crates/llama/: Cargo.toml
crates/llama/src/: lib.rs  parser.rs  types.rs
crates/moonshine/: Cargo.toml
crates/moonshine/src/: error.rs  lib.rs
crates/notification/: Cargo.toml
crates/notification-interface/: Cargo.toml
crates/notification-interface/src/: lib.rs
crates/notification-macos/: Cargo.toml
crates/notification-macos/examples/: test_notification.rs
crates/notification-macos/src/: lib.rs
crates/notification-macos/swift-lib/src/: lib.swift
crates/notification/src/: lib.rs
crates/notification2/: Cargo.toml
crates/notification2/src/: lib.rs
crates/onnx/: Cargo.toml
crates/tcc/: Cargo.toml
crates/template/: Cargo.toml
crates/template/assets/: ai_chat_system.jinja  auto_generate_tags.system.jinja  auto_generate_tags.user.jinja  chat.system.jinja  chat.user.jinja  enhance.system.jinja  (+1 more)
crates/transcribe-aws/: Cargo.toml
crates/transcribe-deepgram/: Cargo.toml
crates/transcribe-moonshine/: Cargo.toml
crates/transcribe-moonshine/src/: error.rs  model.rs  service.rs
crates/transcribe-moonshine/src/service/: mod.rs  streaming.rs
crates/transcribe-openai/: Cargo.toml
crates/transcribe-openai/src/: lib.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/vad/: Cargo.toml
crates/whisper-local/: Cargo.toml
crates/ws-utils/: Cargo.toml
owhisper/: README.md  schema.json
owhisper/owhisper-client/: Cargo.toml
owhisper/owhisper-config/: Cargo.toml
owhisper/owhisper-config/examples/: cli.json  docker.json
owhisper/owhisper-config/src/: lib.rs
owhisper/owhisper-interface/: Cargo.toml
owhisper/owhisper-mcp/: Cargo.toml
owhisper/owhisper-model/: Cargo.toml
owhisper/owhisper-model/src/: error.rs  lib.rs
owhisper/owhisper-server/: Cargo.toml  Dockerfile  build.rs
owhisper/owhisper-server/src/: main.rs  meter.rs  misc.rs  server.rs  utils.rs
owhisper/owhisper-server/src/commands/: config.rs  mod.rs  models.rs  pull.rs  readme.rs  run.rs  serve.rs
owhisper/owhisper-server/src/commands/run/: event.rs  guard.rs  mod.rs  realtime.rs  recorded.rs  state.rs  ui.rs
plugins/analytics/: build.rs  package.json
plugins/apple-calendar/: package.json
plugins/auth/: package.json
plugins/connector/: Cargo.toml  build.rs  package.json
plugins/db/: Cargo.toml  build.rs  package.json
plugins/flags/: package.json
plugins/listener/: Cargo.toml  build.rs  package.json
plugins/local-llm/: Cargo.toml  build.rs  package.json
plugins/local-stt/: Cargo.toml  build.rs  package.json
plugins/mcp/: Cargo.toml  build.rs  package.json
plugins/misc/: Cargo.toml  package.json
plugins/notification/: Cargo.toml  build.rs  package.json
plugins/obsidian/: package.json
plugins/sfx/: package.json
plugins/sse/: package.json
plugins/store2/: package.json
plugins/task/: package.json
plugins/template/: package.json
plugins/tracing/: Cargo.toml  build.rs  package.json
plugins/tracing/js/: bindings.gen.ts
plugins/tracing/permissions/: default.toml
plugins/tracing/permissions/autogenerated/: reference.md
plugins/tracing/permissions/autogenerated/commands/: hi.toml  logs_dir.toml
plugins/tracing/permissions/schemas/: schema.json
plugins/tracing/src/: commands.rs  ext.rs  lib.rs
plugins/tray/: package.json
plugins/webhook/: Cargo.toml  build.rs  openapi.json  package.json
plugins/webhook/docs/: webhook-openapi.json
plugins/webhook/js/: bindings.gen.ts
plugins/webhook/permissions/autogenerated/: reference.md
plugins/webhook/permissions/autogenerated/commands/: todo.toml
plugins/webhook/permissions/schemas/: schema.json
plugins/webhook/src/: commands.rs  ext.rs  lib.rs  openapi.rs
plugins/windows/: package.json
scripts/s3/: download.sh  upload.sh
(+267 files in other folders)
