[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-download-interface = { workspace = true }

base64 = "0.22.1"
crc32fast = "1.4.2"
thiserror = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tokio-util = "0.7"
tracing = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
hypr-s3 = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true, features = ["minio"] }
wiremock = "0.5"
