[package]
name = "kyutai"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
metal = ["candle/metal", "candle-nn/metal"]

[dependencies]
anyhow = "1.0"
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = "0.9.1"
moshi = "0.6.3"
sentencepiece = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
