[package]
name = "moonshine"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["hypr-onnx/cuda"]
coreml = ["hypr-onnx/coreml"]
directml = ["hypr-onnx/directml"]

[dependencies]
hypr-onnx = { workspace = true }
owhisper-config = { workspace = true }

thiserror = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
dirs = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }
