[package]
name = "notification-macos"
version = "0.1.0"
edition = "2021"

[build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[dependencies]
hypr-notification-interface = { workspace = true }
swift-rs = { workspace = true }

[dev-dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-foundation = { workspace = true }
