[package]
name = "transcribe-moonshine"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["hypr-onnx/cuda"]
coreml = ["hypr-onnx/coreml"]
directml = ["hypr-onnx/directml"]

[dev-dependencies]
hypr-data = { workspace = true }
rodio = { workspace = true }

[dependencies]
hypr-onnx = { workspace = true }
tokenizers = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
