[package]
name = "transcribe-moonshine"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["hypr-onnx/cuda"]
coreml = ["hypr-onnx/coreml"]
directml = ["hypr-onnx/directml"]

[dev-dependencies]
dirs = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }

[dependencies]
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }

hypr-audio-utils = { workspace = true }
hypr-chunker = { workspace = true }
hypr-onnx = { workspace = true }
hypr-ws-utils = { workspace = true }

kalosm-sound = { workspace = true }
tokenizers = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }

async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
