[package]
name = "tauri-plugin-tracing"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-tracing"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-sentry = { workspace = true, features = ["tracing"] }

dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-appender = { version = "0.2" }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
